--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>UI Verse - Open Source UI Library</title>
+    <title>Shades By Jay - Open Source UI Library</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
@@ -13,7 +13,7 @@
         <div class="nav-container">
             <a href="index.html" class="logo">
                 <i class="fas fa-cube"></i>
-                <span>UI Verse</span>
+                <span>Shades By Jay</span>
             </a>
             <div class="nav-links">
                 <a href="#" class="nav-link active" data-category="all">All</a>
@@ -42,12 +42,12 @@
             <p>Community-built library of UI elements. Copy as HTML/CSS with a single click.</p>
             <div class="hero-stats">
                 <div class="stat">
-                    <span class="stat-number">50+</span>
+                    <span class="stat-number">140+</span>
                     <span class="stat-label">UI Elements</span>
                 </div>
                 <div class="stat">
-                    <span class="stat-number">25+</span>
-                    <span class="stat-label">Living Components</span>
+                    <span class="stat-number">75+</span>
+                    <span class="stat-label">3D Keyboard Keys</span>
                 </div>
                 <div class="stat">
                     <span class="stat-number">MIT</span>
@@ -62,6 +62,10 @@
         <div class="tags-container">
             <span class="tag active" data-tag="all">All</span>
             <span class="tag" data-tag="living">🌿 Living</span>
+            <span class="tag" data-tag="creative">🎨 Creative</span>
+            <span class="tag" data-tag="keyboard">⌨️ Keyboard</span>
+            <span class="tag" data-tag="icon">📦 Icon</span>
+            <span class="tag" data-tag="gaming">🎮 Gaming</span>
             <span class="tag" data-tag="animated">Animated</span>
             <span class="tag" data-tag="minimal">Minimal</span>
             <span class="tag" data-tag="gradient">Gradient</span>
@@ -70,8 +74,9 @@
             <span class="tag" data-tag="glassmorphism">Glassmorphism</span>
             <span class="tag" data-tag="neumorphism">Neumorphism</span>
             <span class="tag" data-tag="morph">Morphing</span>
-            <span class="tag" data-tag="glow">Glow</span>
-            <span class="tag" data-tag="pulse">Pulse</span>
+            <span class="tag" data-tag="social">Social</span>
+            <span class="tag" data-tag="retro">Retro</span>
+            <span class="tag" data-tag="music">🎵 Music</span>
         </div>
     </section>
 
@@ -133,7 +138,7 @@
             <div class="footer-brand">
                 <a href="index.html" class="logo">
                     <i class="fas fa-cube"></i>
-                    <span>UI Verse</span>
+                    <span>Shades By Jay</span>
                 </a>
                 <p>Free and open-source UI components for your next project.</p>
             </div>
@@ -159,11 +164,14 @@
             </div>
         </div>
         <div class="footer-bottom">
-            <p>&copy; 2024 UI Verse. All rights reserved.</p>
+            <p>&copy; 2024 Shades By Jay. All rights reserved.</p>
         </div>
     </footer>
 
     <script src="js/components.js"></script>
+    <script src="js/components-keyboard.js"></script>
+    <script src="js/components-keyboard2.js"></script>
+    <script src="js/components-keyboard3.js"></script>
     <script src="js/app.js"></script>
 </body>
 </html>
