Refactor code structure for improved readability and maintainability

--- a/index.html
+++ b/index.html
@@ -42,8 +42,12 @@
             <p>Community-built library of UI elements. Copy as HTML/CSS with a single click.</p>
             <div class="hero-stats">
                 <div class="stat">
-                    <span class="stat-number">140+</span>
+                    <span class="stat-number">165+</span>
                     <span class="stat-label">UI Elements</span>
+                </div>
+                <div class="stat">
+                    <span class="stat-number">25+</span>
+                    <span class="stat-label">Cards</span>
                 </div>
                 <div class="stat">
                     <span class="stat-number">75+</span>
@@ -61,6 +65,7 @@
     <section class="tags-section">
         <div class="tags-container">
             <span class="tag active" data-tag="all">All</span>
+            <span class="tag" data-tag="cards">🃏 Cards</span>
             <span class="tag" data-tag="living">🌿 Living</span>
             <span class="tag" data-tag="creative">🎨 Creative</span>
             <span class="tag" data-tag="keyboard">⌨️ Keyboard</span>
@@ -172,6 +177,7 @@
     <script src="js/components-keyboard.js"></script>
     <script src="js/components-keyboard2.js"></script>
     <script src="js/components-keyboard3.js"></script>
+    <script src="js/components-cards.js"></script>
     <script src="js/app.js"></script>
 </body>
 </html>
