Refactor code structure for improved readability and maintainability

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <p>Community-built library of UI elements. Copy as HTML/CSS with a single click.</p>
             <div class="hero-stats">
                 <div class="stat">
-                    <span class="stat-number">168+</span>
+                    <span class="stat-number">218+</span>
                     <span class="stat-label">UI Elements</span>
                 </div>
                 <div class="stat">
@@ -179,6 +179,7 @@
     <script src="js/components-keyboard3.js"></script>
     <script src="js/components-cards.js"></script>
     <script src="js/components-retro.js"></script>
+    <script src="js/components-loaders.js"></script>
     <script src="js/app.js"></script>
 </body>
 </html>
