Update styles and content for improved UI and user experience

--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Shades By Jay - Open Source UI Library</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
@@ -39,19 +42,19 @@
     <header class="hero">
         <div class="hero-content">
             <h1>Open Source UI Library</h1>
-            <p>Community-built library of UI elements. Copy as HTML/CSS with a single click.</p>
+            <p>A beautiful collection of community-built UI elements. Copy as HTML/CSS with a single click and build faster.</p>
             <div class="hero-stats">
                 <div class="stat">
                     <span class="stat-number">218+</span>
                     <span class="stat-label">UI Elements</span>
                 </div>
                 <div class="stat">
-                    <span class="stat-number">25+</span>
-                    <span class="stat-label">Cards</span>
+                    <span class="stat-number">50+</span>
+                    <span class="stat-label">Loaders</span>
                 </div>
                 <div class="stat">
                     <span class="stat-number">75+</span>
-                    <span class="stat-label">3D Keyboard Keys</span>
+                    <span class="stat-label">3D Keys</span>
                 </div>
                 <div class="stat">
                     <span class="stat-number">MIT</span>
@@ -65,23 +68,21 @@
     <section class="tags-section">
         <div class="tags-container">
             <span class="tag active" data-tag="all">All</span>
+            <span class="tag" data-tag="loader">⏳ Loaders</span>
             <span class="tag" data-tag="cards">🃏 Cards</span>
+            <span class="tag" data-tag="keyboard">⌨️ Keyboard</span>
             <span class="tag" data-tag="living">🌿 Living</span>
             <span class="tag" data-tag="creative">🎨 Creative</span>
-            <span class="tag" data-tag="keyboard">⌨️ Keyboard</span>
             <span class="tag" data-tag="icon">📦 Icon</span>
             <span class="tag" data-tag="gaming">🎮 Gaming</span>
-            <span class="tag" data-tag="animated">Animated</span>
+            <span class="tag" data-tag="animated">✨ Animated</span>
             <span class="tag" data-tag="minimal">Minimal</span>
             <span class="tag" data-tag="gradient">Gradient</span>
             <span class="tag" data-tag="3d">3D</span>
             <span class="tag" data-tag="neon">Neon</span>
-            <span class="tag" data-tag="glassmorphism">Glassmorphism</span>
+            <span class="tag" data-tag="glassmorphism">Glass</span>
             <span class="tag" data-tag="neumorphism">Neumorphism</span>
-            <span class="tag" data-tag="morph">Morphing</span>
-            <span class="tag" data-tag="social">Social</span>
-            <span class="tag" data-tag="retro">Retro</span>
-            <span class="tag" data-tag="music">🎵 Music</span>
+            <span class="tag" data-tag="retro">🕹️ Retro</span>
         </div>
     </section>
 
@@ -145,31 +146,31 @@
                     <i class="fas fa-cube"></i>
                     <span>Shades By Jay</span>
                 </a>
-                <p>Free and open-source UI components for your next project.</p>
+                <p>Free and open-source UI components for your next project. Built with love by the community.</p>
             </div>
             <div class="footer-links">
                 <div class="footer-column">
                     <h4>Resources</h4>
                     <a href="#">Documentation</a>
                     <a href="#">Guidelines</a>
-                    <a href="#">Blog</a>
+                    <a href="#">Changelog</a>
                 </div>
                 <div class="footer-column">
                     <h4>Community</h4>
-                    <a href="#">GitHub</a>
+                    <a href="https://github.com/sithija-jayasinghe/Shades-by-Jay-UI-Library" target="_blank">GitHub</a>
                     <a href="#">Discord</a>
                     <a href="#">Twitter</a>
                 </div>
                 <div class="footer-column">
                     <h4>Legal</h4>
                     <a href="#">MIT License</a>
-                    <a href="#">Privacy Policy</a>
-                    <a href="#">Terms of Service</a>
+                    <a href="#">Privacy</a>
+                    <a href="#">Terms</a>
                 </div>
             </div>
         </div>
         <div class="footer-bottom">
-            <p>&copy; 2024 Shades By Jay. All rights reserved.</p>
+            <p>&copy; 2025 Shades By Jay. Open Source with ❤️</p>
         </div>
     </footer>
 
