Refactor code structure for improved readability and maintainability

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <p>A beautiful collection of community-built UI elements. Copy as HTML/CSS with a single click and build faster.</p>
             <div class="hero-stats">
                 <div class="stat">
-                    <span class="stat-number">218+</span>
+                    <span class="stat-number">253+</span>
                     <span class="stat-label">UI Elements</span>
                 </div>
                 <div class="stat">
@@ -68,6 +68,7 @@
     <section class="tags-section">
         <div class="tags-container">
             <span class="tag active" data-tag="all">All</span>
+            <span class="tag" data-tag="switch">🔘 Switches</span>
             <span class="tag" data-tag="loader">⏳ Loaders</span>
             <span class="tag" data-tag="cards">🃏 Cards</span>
             <span class="tag" data-tag="keyboard">⌨️ Keyboard</span>
@@ -181,6 +182,8 @@
     <script src="js/components-cards.js"></script>
     <script src="js/components-retro.js"></script>
     <script src="js/components-loaders.js"></script>
+    <script src="js/components-switches.js"></script>
+    <script src="js/components-3d-cards.js"></script>
     <script src="js/app.js"></script>
 </body>
 </html>
