Add admin dashboard and submission page with Supabase integration

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
                 <a href="#" class="nav-link" data-category="loaders">Loaders</a>
                 <a href="#" class="nav-link" data-category="switches">Switches</a>
                 <a href="#" class="nav-link" data-category="inputs">Inputs</a>
+                <a href="submit.html" class="nav-link" style="color: var(--accent-color); font-weight: bold;">+ Submit</a>
             </div>
             <div class="nav-actions">
                 <div class="search-box">
@@ -175,6 +176,8 @@
         </div>
     </footer>
 
+    <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+    <script src="js/supabase-config.js"></script>
     <script src="js/components.js"></script>
     <script src="js/components-keyboard.js"></script>
     <script src="js/components-keyboard2.js"></script>
