Update hero stats dynamically based on component counts

--- a/index.html
+++ b/index.html
@@ -46,16 +46,16 @@
             <p>A beautiful collection of community-built UI elements. Copy as HTML/CSS with a single click and build faster.</p>
             <div class="hero-stats">
                 <div class="stat">
-                    <span class="stat-number">253+</span>
+                    <span class="stat-number" id="totalStats">250+</span>
                     <span class="stat-label">UI Elements</span>
                 </div>
                 <div class="stat">
-                    <span class="stat-number">50+</span>
+                    <span class="stat-number" id="loaderStats">50+</span>
                     <span class="stat-label">Loaders</span>
                 </div>
                 <div class="stat">
-                    <span class="stat-number">75+</span>
-                    <span class="stat-label">3D Keys</span>
+                    <span class="stat-number" id="3dStats">75+</span>
+                    <span class="stat-label">3D Elements</span>
                 </div>
                 <div class="stat">
                     <span class="stat-number">MIT</span>
