Add 'Forms' category to admin dashboard and submission page

--- a/admin/index.html
+++ b/admin/index.html
@@ -210,6 +210,7 @@
                                 <option value="cards" ${comp.category === 'cards' ? 'selected' : ''}>Cards</option>
                                 <option value="loaders" ${comp.category === 'loaders' ? 'selected' : ''}>Loaders</option>
                                 <option value="inputs" ${comp.category === 'inputs' ? 'selected' : ''}>Inputs</option>
+                                <option value="forms" ${comp.category === 'forms' ? 'selected' : ''}>Forms</option>
                                 <option value="switches" ${comp.category === 'switches' ? 'selected' : ''}>Switches</option>
                                 <option value="other" ${comp.category === 'other' ? 'selected' : ''}>Other</option>
                             </select>
