--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
                 <a href="#" class="nav-link" data-category="loaders">Loaders</a>
                 <a href="#" class="nav-link" data-category="switches">Switches</a>
                 <a href="#" class="nav-link" data-category="inputs">Inputs</a>
-                <a href="submit.html" class="nav-link" style="color: var(--accent-color); font-weight: bold;">+ Submit</a>
+                <a href="#" class="nav-link" data-category="forms">Forms</a>
+                <a href="submit.html" class="nav-link" style="color: var(--accent-color); font-weight: bold;">Submit</a>
             </div>
             <div class="nav-actions">
                 <div class="search-box">
@@ -72,6 +73,7 @@
             <span class="tag" data-tag="switch">🔘 Switches</span>
             <span class="tag" data-tag="loader">⏳ Loaders</span>
             <span class="tag" data-tag="cards">🃏 Cards</span>
+            <span class="tag" data-tag="forms">📝 Forms</span>
             <span class="tag" data-tag="keyboard">⌨️ Keyboard</span>
             <span class="tag" data-tag="living">🌿 Living</span>
             <span class="tag" data-tag="creative">🎨 Creative</span>
