--- a/submit.html
+++ b/submit.html
@@ -160,6 +160,7 @@
                     <option value="cards">Cards</option>
                     <option value="loaders">Loaders</option>
                     <option value="inputs">Inputs</option>
+                    <option value="forms">Forms</option>
                     <option value="switches">Switches</option>
                     <option value="other">Other</option>
                 </select>
