--- a/index.html
+++ b/index.html
@@ -208,6 +208,9 @@
                 </button>
                 <div class="divider"><span>OR</span></div>
                 <form id="emailAuthForm">
+                    <div class="form-group hidden" id="nameField">
+                        <input type="text" id="nameInput" placeholder="Full Name">
+                    </div>
                     <div class="form-group">
                         <input type="email" id="emailInput" placeholder="Email address" required>
                     </div>
