added a new feature to the playground page to allow users to open components directly in the playground from the main interface. Updated the toast notification function to ensure proper message display. Fixed an issue with the component name retrieval when exporting to CodePen. Adjusted CSS styles for better UI consistency across the application.

--- a/index.html
+++ b/index.html
@@ -118,12 +118,18 @@
 
     <!-- Code Modal -->
     <div class="modal" id="codeModal">
-        <div class="modal-content">
+        <div class="modal-content code-modal-content">
             <div class="modal-header">
                 <h2 id="modalTitle">Component Name</h2>
-                <button class="modal-close" id="modalClose">
-                    <i class="fas fa-times"></i>
-                </button>
+                <div class="modal-header-actions">
+                    <button class="mode-toggle-btn" id="modeToggle" title="Toggle Edit Mode">
+                        <i class="fas fa-play"></i>
+                        <span>Playground</span>
+                    </button>
+                    <button class="modal-close" id="modalClose">
+                        <i class="fas fa-times"></i>
+                    </button>
+                </div>
             </div>
             <div class="modal-preview" id="modalPreview">
                 <!-- Live preview will be shown here -->
@@ -136,20 +142,36 @@
                 <div class="code-block active" id="htmlCode">
                     <div class="code-header">
                         <span>HTML</span>
-                        <button class="copy-btn" data-type="html">
-                            <i class="fas fa-copy"></i> Copy
-                        </button>
+                        <div class="code-header-actions">
+                            <button class="reset-btn" id="resetHtml" title="Reset to Original">
+                                <i class="fas fa-undo"></i>
+                            </button>
+                            <button class="copy-btn" data-type="html">
+                                <i class="fas fa-copy"></i> Copy
+                            </button>
+                        </div>
                     </div>
-                    <pre><code id="htmlContent"></code></pre>
+                    <div class="code-display">
+                        <pre><code id="htmlContent"></code></pre>
+                        <textarea id="htmlEditor" class="code-editor" spellcheck="false"></textarea>
+                    </div>
                 </div>
                 <div class="code-block" id="cssCode">
                     <div class="code-header">
                         <span>CSS</span>
-                        <button class="copy-btn" data-type="css">
-                            <i class="fas fa-copy"></i> Copy
-                        </button>
+                        <div class="code-header-actions">
+                            <button class="reset-btn" id="resetCss" title="Reset to Original">
+                                <i class="fas fa-undo"></i>
+                            </button>
+                            <button class="copy-btn" data-type="css">
+                                <i class="fas fa-copy"></i> Copy
+                            </button>
+                        </div>
                     </div>
-                    <pre><code id="cssContent"></code></pre>
+                    <div class="code-display">
+                        <pre><code id="cssContent"></code></pre>
+                        <textarea id="cssEditor" class="code-editor" spellcheck="false"></textarea>
+                    </div>
                 </div>
             </div>
         </div>
