--- a/index.html
+++ b/index.html
@@ -81,6 +81,18 @@
                     <span class="stat-label">License</span>
                 </div>
             </div>
+            
+            <!-- NPM Install Section -->
+            <div class="npm-install-section">
+                <p class="npm-label"><i class="fab fa-npm"></i> Install via NPM</p>
+                <div class="npm-command">
+                    <code>npx shades-ui add</code>
+                    <button class="npm-copy-btn" id="npmCopyBtn" title="Copy command">
+                        <i class="fas fa-copy"></i>
+                    </button>
+                </div>
+                <p class="npm-hint">Or use: <code>npx shades-ui list</code> to browse components</p>
+            </div>
         </div>
     </header>
 
@@ -138,38 +150,8 @@
                 </div>
             </div>
             <div class="modal-preview" id="modalPreview">
-                <!-- Responsive Resizer Controls -->
-                <div class="resizer-controls">
-                    <div class="resizer-sizes">
-                        <button class="resizer-btn active" data-width="100%" title="Full Width">
-                            <i class="fas fa-desktop"></i>
-                            <span>Full</span>
-                        </button>
-                        <button class="resizer-btn" data-width="768px" title="Tablet">
-                            <i class="fas fa-tablet-alt"></i>
-                            <span>768px</span>
-                        </button>
-                        <button class="resizer-btn" data-width="425px" title="Mobile L">
-                            <i class="fas fa-mobile-alt"></i>
-                            <span>425px</span>
-                        </button>
-                        <button class="resizer-btn" data-width="375px" title="Mobile M">
-                            <i class="fas fa-mobile-alt"></i>
-                            <span>375px</span>
-                        </button>
-                    </div>
-                    <div class="resizer-width-display">
-                        <span id="currentWidth">100%</span>
-                    </div>
-                </div>
-                <!-- Resizable Preview Container -->
-                <div class="preview-resizable" id="previewResizable">
-                    <div class="preview-content" id="previewContent">
-                        <!-- Live preview will be shown here -->
-                    </div>
-                    <div class="resize-handle" id="resizeHandle" title="Drag to resize">
-                        <i class="fas fa-grip-lines-vertical"></i>
-                    </div>
+                <div class="preview-content" id="previewContent">
+                    <!-- Live preview will be shown here -->
                 </div>
             </div>
             
