Add guidelines, license, privacy policy, and terms of service pages with navigation and theme toggle functionality

--- a/index.html
+++ b/index.html
@@ -81,18 +81,6 @@
                     <span class="stat-label">License</span>
                 </div>
             </div>
-            
-            <!-- NPM Install Section -->
-            <div class="npm-install-section">
-                <p class="npm-label"><i class="fab fa-npm"></i> Install via NPM</p>
-                <div class="npm-command">
-                    <code>npx shades-ui add</code>
-                    <button class="npm-copy-btn" id="npmCopyBtn" title="Copy command">
-                        <i class="fas fa-copy"></i>
-                    </button>
-                </div>
-                <p class="npm-hint">Or use: <code>npx shades-ui list</code> to browse components</p>
-            </div>
         </div>
     </header>
 
@@ -283,26 +271,25 @@
             <div class="footer-links">
                 <div class="footer-column">
                     <h4>Resources</h4>
-                    <a href="#">Documentation</a>
-                    <a href="#">Guidelines</a>
-                    <a href="#">Changelog</a>
+                    <a href="documentation.html">Documentation</a>
+                    <a href="guidelines.html">Guidelines</a>
+                    <a href="changelog.html">Changelog</a>
                 </div>
                 <div class="footer-column">
-                    <h4>Community</h4>
+                    <h4>Socials</h4>
                     <a href="https://github.com/sithija-jayasinghe/Shades-by-Jay-UI-Library" target="_blank">GitHub</a>
-                    <a href="#">Discord</a>
-                    <a href="#">Twitter</a>
+                    <a href="https://www.linkedin.com/in/sithija-harshana-jayasinghe-552822340" target="_blank">LinkedIn</a>
                 </div>
                 <div class="footer-column">
                     <h4>Legal</h4>
-                    <a href="#">MIT License</a>
-                    <a href="#">Privacy</a>
-                    <a href="#">Terms</a>
+                    <a href="license.html">MIT License</a>
+                    <a href="privacy.html">Privacy</a>
+                    <a href="terms.html">Terms</a>
                 </div>
             </div>
         </div>
         <div class="footer-bottom">
-            <p>&copy; 2025 Shades By Jay. Open Source with ❤️</p>
+            <p>&copy; 2025 Shades By Jay. Developed by <a href="www.linkedin.com/in/sithija-harshana-jayasinghe-552822340">Sithija Harshana Jayasinghe</a></p>
         </div>
     </footer>
 
