fix: Update links to the MIT License page in the stats and footer sections

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                 </div>
                 <div class="stat">
                     <span class="stat-number">MIT</span>
-                    <span class="stat-label">License</span>
+                    <span class="stat-label">licensey.html</span>
                 </div>
             </div>
         </div>
@@ -282,7 +282,7 @@
                 </div>
                 <div class="footer-column">
                     <h4>Legal</h4>
-                    <a href="license.html">MIT License</a>
+                    <a href="licensey.html">MIT License</a>
                     <a href="privacy.html">Privacy</a>
                     <a href="terms.html">Terms</a>
                 </div>
