fix: Correct link to License page in footer of privacy and terms pages

--- a/privacy.html
+++ b/privacy.html
@@ -189,7 +189,7 @@
         <div class="footer-content">
             <p>© 2025 Shades By Jay. Open source under MIT License.</p>
             <div class="footer-links">
-                <a href="license.html">License</a>
+                <a href="licensey.html">License</a>
                 <a href="terms.html">Terms</a>
                 <a href="https://github.com/sithija-jayasinghe/Shades-by-Jay-UI-Library" target="_blank">
                     <i class="fab fa-github"></i> GitHub
